--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,6 +33,10 @@
         --ring: 222.2 84% 4.9%;
 
         --radius: 0.5rem;
+
+        --carousel-bg: 0 0% 100%;
+        --overlay-light: rgba(255, 255, 255, 0.5);
+        --overlay-dark: rgb(255, 255, 255);
     }
 
     .dark {
@@ -63,6 +67,10 @@
         --border: 217.2 32.6% 17.5%;
         --input: 217.2 32.6% 17.5%;
         --ring: 212.7 26.8% 83.9%;
+
+        --carousel-bg: rgb(0, 0, 0);
+        --overlay-light: rgba(0, 0, 0, 0.5);
+        --overlay-dark: #000000;
     }
 }
 
